<resources>
    <string name="app_name">Mandar App</string>
    <string name="gambar">gambar bg atas login</string>
    <string name="login">MASUK</string>
    <string name="logintext">Masuk ke akun anda !</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="logblmpunyaakun">Belum Punya Akun ?</string>
    <string name="register">DAFTAR</string>
    <string name="registtext">Buat akun baru anda !</string>
    <string name="email">Alamat E-mail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hasil_tangkapan_ikan">Hasil Tangkapan Ikan</string>
    <string name="texthasilproduksi">Penggunaan\nBBM\nHari</string>
    <string name="textikandominan">Penggunaan\n\BBM\nBulan</string>
    <string name="contoh_tanggal">2024-10-21</string>
    <string name="nama_nelayan">Ibnu Yazid</string>
    <string name="titik_dua">:</string>
    <string name="jenis_bbm">Jenis BBM</string>
    <string name="contoh_bbm">Solar</string>
    <string name="penggunaan_bbm">Total Penggunaan BBM</string>
    <string name="total_bbm">100 liter</string>
    <string name="harga_per_liter">Harga Per Liter</string>
    <string name="harga_bbm">Rp. 10.000</string>
    <string name="total_harga">Rp. 100.000</string>
    <string name="jumlah_harga_bbm">Total Harga BBM</string>
    <string name="kepemilikan_perahu">Pribadi</string>
    <string name="tvStatusPerahu">Status Kepemilikan</string>
    <string name="tvLebarPerahu">Lebar Perahu</string>
    <string name="lebar_perahu">10 meter</string>
    <string name="tvPanjangPerahu">Panjang Perahu</string>
    <string name="panjang_perahu">30 meter</string>
    <string name="tvNotulensiRapat">Notulensi Rapat :</string>
    <string name="notulensi">Pada hari ini terdapat kegiatan rapat bulanan yang membahas tentang kegiatan selama satu bulan penuh.\n</string>
    <string name="tvNamaNelayan">Nama Nelayan</string>
    <string name="tvNomorInduk">Nomor Induk Berusaha</string>
    <string name="nib">3625156561526171</string>
    <string name="tvNamaKelompokNelayan">Nama Kelompok Nelayan</string>
    <string name="kelompok_nelayan">Pondok Layar</string>
    <string name="tvNamaPerahu">Nama Perahu</string>
    <string name="nama_perahu">Tri Tunggal</string>
    <string name="tvJenisPerahu">Jenis Perahu</string>
    <string name="jenis_perahu">Sampan Viber</string>
    <string name="tvKetuaKelompok">Ketua Kelompok</string>
    <string name="ketua_kelompok">Bapak Ibnu Yazid</string>
    <string name="tvTempatProduksi">Tempat Produksi</string>
    <string name="tvBeratTangkapan">Berat Hasil Tangkapan</string>
    <string name="berat_tangkapan">100 kg</string>
    <string name="tvHargaPerKilo">Harga Per Kilogram</string>
    <string name="harga_perkilo">Rp. 10.000</string>
    <string name="tvJenisIkan">Jenis Hasil Tangkapan</string>
    <string name="jenis_hasil_tangkapan">Ikan Bandeng</string>
    <string name="perahu_nelayan">Perahu Nelayan</string>
    <string name="textjumlahperahu">Jumlah\nTotal\nPerahu\nNelayan</string>
    <string name="textperahuaktif">Jumlah\nTotal\nPerahu\nAktif</string>
    <string name="rata1">Total\nHarga\nPenggunaan\nBBM</string>
    <string name="rata2">Harga\nPer Liter\nBBM</string>
    <string name="tv1">Total\nHasil\nProduksi\nIkan</string>
    <string name="tv2">Ikan\nPaling\nBanyak</string>
    <string name="t1">Total\nPerahu\nNelayan</string>
    <string name="t2">Total\nPerahu\nNelayan\nAktif</string>
    <string name="r1">Panjang\nPerahu\n(meter)</string>
    <string name="r2">Lebar\nPerahu\n(meter)</string>
</resources>