<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:background="@color/bluebg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/tv_namaperahu"
                android:text="Perahu Makmur Berkah"
                android:fontFamily="@font/poppinsbold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/gambar_perahu"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/perahu1" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/tvJenisPerahu"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:textColor="#555555"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/titik_dua"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/tv_jenisperahu"
                        android:layout_weight="1"
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/jenis_perahu"
                        android:layout_marginStart="10dp"/>
                </TableRow>

                <TextView
                    android:id="@+id/tv_idboat"
                    android:text="ID Perahu"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/tvLebarPerahu"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:textColor="#555555"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/titik_dua"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/tv_lebarperahu"
                        android:layout_weight="1"
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/lebar_perahu"
                        android:layout_marginStart="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/tvPanjangPerahu"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:textColor="#555555"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/titik_dua"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/tv_panjangperahu"
                        android:layout_weight="1"
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/panjang_perahu"
                        android:layout_marginStart="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="Fishing Method"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:textColor="#555555"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text=":"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:id="@+id/tv_fishingmethod"
                        android:layout_weight="1"
                        android:textColor="@color/bluebg"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="Fishing Method"
                        android:layout_marginStart="10dp"/>
                </TableRow>


            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
