<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="11dp">

    <TextView
        android:fontFamily="@font/poppinsbold"
        android:textSize="12sp"
        android:textColor="@color/bluebg"
        android:layout_marginStart="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/bg_roundedbluesoftbg"
        android:text="@string/contoh_tanggal"
        android:id="@+id/tv_tanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_rounded20">

            <TextView
                android:background="@color/bluebg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/tv_namakelompok"
                android:text="Kelompok Pondok Layar"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/perahu1"
                android:id="@+id/iv_gambar_rapat"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:textColor="@color/bluebg"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/tvNotulensiRapat"
                        android:layout_marginEnd="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="-10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tv_notes"
                        android:layout_weight="4"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/notulensi" />

                </TableRow>
            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>