<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="11dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_bottomrounded">

            <TextView
                android:id="@+id/tv_namakelompok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#119BBEC8"
                android:padding="16dp"
                android:text="Kelompok Pondok Layar"
                android:textColor="@color/bluebg"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_gambarkelompok"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/perahu1" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_idkelompok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ID Kelompok"
                        android:visibility="gone" />

                    <TextView
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/tvKetuaKelompok"
                        android:textColor="@color/bluebg"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/titik_dua"
                        android:textColor="#555555"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_ketuakelompok"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/ketua_kelompok"
                        android:textColor="@color/red"
                        android:textSize="14sp" />
                </TableRow>

                <!-- New TableRow for Jumlah Anggota -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="Jumlah Anggota"
                        android:textColor="@color/bluebg"
                        android:textSize="14sp" />
                    <TextView
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/titik_dua"
                        android:textColor="#555555"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tv_jumlahanggota"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="0"
                        android:textColor="@color/red"
                        android:textSize="14sp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
