<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerahuActivity">

    <!-- Navbar Layout -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:elevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="Back Icon"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="287dp"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="54dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/icon_back"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/perahu_nelayan"
                android:textColor="@color/bluebg"
                android:textSize="23sp" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_roundedbluebg"
        android:layout_marginTop="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/totalPerahuNelayan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Jumlah Perahu Nelayan"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/inner_card_1"
                android:layout_width="174dp"
                android:layout_height="125dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_bottomrounded">

                    <TextView
                        android:id="@+id/kalimat1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/textjumlahperahu"
                        android:textColor="@color/bluebg"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/icon1"
                        app:layout_constraintHorizontal_bias="0.21"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/icon1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="Icon Perahu"
                        android:src="@drawable/ic_boat"
                        app:layout_constraintBottom_toTopOf="@+id/kalimat2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/kalimat2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="30dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="100"
                        android:textColor="@color/bluebg"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon1" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/inner_card_2"
                android:layout_width="174dp"
                android:layout_height="125dp"
                android:layout_marginStart="196dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/inner_card_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.514">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_bottomrounded">

                    <TextView
                        android:id="@+id/kalimat3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/textperahuaktif"
                        android:textColor="@color/bluebg"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/icon2"
                        app:layout_constraintHorizontal_bias="0.21"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="Icon Tangkapan"
                        android:src="@drawable/ic_boat"
                        app:layout_constraintBottom_toTopOf="@+id/kalimat4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/kalimat4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="100"
                        android:textColor="@color/bluebg"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Metode Tangkap Ikan Paling Dominan"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="18sp"-->
<!--        android:layout_marginTop="300dp"-->
<!--        android:layout_marginBottom="8dp" />-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="1. Gill net\n2. Jaring Lingkar\n3. Jaring Angkat"-->
<!--        android:textSize="16sp" />-->

    <TextView
        android:id="@+id/informasidash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Daftar Perahu Nelayan"
        android:textColor="@color/bluebg"
        android:textSize="20sp" />

    <android.widget.SearchView
        android:id="@+id/searchview"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="-130dp"
        android:background="@drawable/bg_rounded20"
        android:iconifiedByDefault="false"
        android:queryHint="Pencarian Data Perahu Nelayan"
        app:closeIcon="@drawable/ic_close"
        app:goIcon="@drawable/ic_search"
        app:iconifiedByDefault="false"
        app:searchIcon="@drawable/ic_search" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_marginTop="390dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/black"
            android:dividerHeight="2dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>